// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getConnections 1`] = `Array []`;

exports[`setCampaign("test") 1`] = `
Array [
  Object {
    "payload": Object {
      "test": "test",
    },
    "type": "SET_CAMPAIGN",
  },
]
`;

exports[`setCampaign(null) 1`] = `
Array [
  Object {
    "payload": undefined,
    "type": "SET_CAMPAIGN",
  },
]
`;

exports[`toggleCampaignText 1`] = `
Array [
  Object {
    "payload": undefined,
    "type": "TOGGLE_CAMPAIGN_TEXT",
  },
]
`;
